@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove static buffer.
+ server/hiscore.c
+Nicolas Weeger, 2008-03-29
+
 Remove static buffer, simplify code.
  server/hiscore.c
 Nicolas Weeger, 2008-03-29
